Fix-icon alignment now lets go

--- a/style/style.css
+++ b/style/style.css
@@ -107,14 +107,10 @@ nav{
     justify-content: center;
     align-items: center;
 }
-/* .dot img{ */
-    /* display: flex; */
-    /* align-items: center; */
-    /* height: 10px;
-    width: 10px; */
-    /* background-color: #469165; */
-    /* border-radius: 50%; */
-/* } */
+.dot img{
+    display: flex;
+    align-items: center;
+}
 .unique-btn:hover{
     cursor: pointer;
     box-shadow: 0 6px 10px #e3e9e649;
@@ -159,8 +155,7 @@ nav{
     box-shadow: 0 0 8px #00000010 ;
     border-radius: 8px 8px 0 0;
     background-color: #FFFFFF;
-    border-bottom: none;
-    
+    border-bottom: none;    
 }
 
 .note-box img{
@@ -187,7 +182,7 @@ nav{
 }
 .brain-test{
     margin-top: 121px;
-    width: 500px;
+    width: 700px;
 }
 .brain-test .test-header{
     color: #469165;
@@ -245,15 +240,12 @@ footer{
     align-items: center;
 }
 footer .social img{
-    /* width: 20px;
-    height: 20px; */
     background-color: #FFFFFF;   
     border-radius:50%;
-    padding: 2px;
+    padding: 6px;
     height: 24px;
     width: 24px;
-    margin-right: 10px;
-    /* width: 100%; */
+    margin-right: 10px;   
 }
 footer .social p{
     color: #FFFFFF;
@@ -265,8 +257,6 @@ footer .social p{
 footer hr{
     border: 1px solid #E5E7EB;
     margin-top: 80px;
-    /* color:#E5E7EB ; */
-    font-weight: 1;
 }
 footer .copyright{
     margin-top: 30px;
